--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link rel="stylesheet" href="./assets/css/style.css" />  
     <title>Humor</title>
   </head>
@@ -86,7 +87,7 @@
 
       <footer>
 
-        <!-- <div class="container_footer">
+        <div class="container_footer">
           <a href="https://twitter.com/Labuupaim" target="_blank">
             <img src="Assets\Image\footer\twitter.png" alt="twitter Logo" title="Perfil Labu Paim" style="float: left" />
           </a>
@@ -104,22 +105,7 @@
           </a>
           <a href="https://www.linkedin.com/in/labupaim" target="_blank">
             <img src="Assets\Image\footer\linkedin.png" alt="linkedin Logo" title="Perfil Labu Paim" style="float: left" />
-          </a>          -->
-
-
-          <div class="share" id="share_id" value="0">
-            <i class="fa fa-plus"></i>
-          </div>
-            <div class="one" id="one_id">
-              <i class="fa fa-facebook"></i>
-            </div>
-            <div class="two" id="two_id">
-              <i class="fa fa-twitter"></i>
-            </div>
-            <div class="three" id="three_id">
-              <i class="fa fa-instagram"></i>
-            </div>
-          
+          </a>
 
         </div>
         <div id="rodape">
