--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="imagex/png" href="./Assets/Image/Logo/icon.ico">
     
     <link rel="stylesheet" type="text/css" href="./Assets/CSS/style.css"/>  
-    <title>Humor</title>
+    <title>Champs</title>
   </head>
    
     <body>
