Tamanho de imagens

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 Zeri
               </h2>
                              
-                <img id="imagem" src="./Assets/Champs/Zeri/Zeri.webp" alt="champ" title="Imagem do Campeão"/>               
+                <img id="imagem" src="./Assets/Champs/Zeri/Zeri.png" alt="champ" title="Imagem do Campeão"/>               
     
               <h2 id="rota">
                 Atiradora
